--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,55 @@
-streamlit==1.28.0
-yfinance==0.2.31
-pandas==1.5.3
-numpy==1.24.3
-plotly==5.17.0
-scikit-learn==1.3.1
-xlsxwriter==3.1.9
-openpyxl==3.1.2
+# Data Analysis & Manipulation
+pandas>=1.5.0
+numpy>=1.21.0
+
+# Data Visualization
+matplotlib>=3.5.0
+seaborn>=0.11.0
+plotly>=5.0.0
+
+# Excel File Handling
+openpyxl>=3.0.0
+xlrd>=2.0.0
+
+# Statistical Analysis
+scipy>=1.7.0
+statsmodels>=0.13.0
+
+# Financial Analysis
+yfinance>=0.2.0
+alpha_vantage>=2.3.0
+
+# Risk Analysis & Machine Learning
+scikit-learn>=1.0.0
+
+# Web Scraping & API Calls
+requests>=2.25.0
+beautifulsoup4>=4.9.0
+
+# Date/Time Handling
+python-dateutil>=2.8.0
+
+# Progress Bars
+tqdm>=4.60.0
+
+# JSON & Configuration
+pyyaml>=5.4.0
+
+# Utilities
+pathlib>=1.0.0
+typing-extensions>=4.0.0
+
+# Optional: For advanced visualizations
+bokeh>=2.4.0
+dash>=2.0.0
+
+# Optional: For PDF report generation
+reportlab>=3.6.0
+fpdf>=1.7.0
+
+# Optional: For interactive widgets
+ipywidgets>=7.6.0
+
+# Optional: Database connectivity
+sqlalchemy>=1.4.0
+psycopg2-binary>=2.9.0
